Bug 1690422 - Resolve {min|max}-content contribution with the preferred aspect ratio and the definite block size. r=TYLin

This is simliar with the previous patch, but we use
min-content/max-content for the inner div (i.e. child frame).

Perhaps we could remove the simliar implementation from
ComputeISizeValue(). However, I still keep it because it can avoid some
extra work when resolving {min|max}-content with aspect-ratio when
reflowing.

Differential Revision: https://phabricator.services.mozilla.com/D104476